force-app/main/default/objects/Charket__WeChatMenu__c/Charket__WeChatMenu__c.object-meta.xml
<CustomObject>
    <label>WeChat Menu</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Menus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>