force-app/main/default/objects/Charket__WeChatMenu__c/fields/Charket__Priority__c.field-meta.xml
<CustomField>
    <fullName>Charket__Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>