force-app/main/default/objects/Charket__WeChatMenu__c/fields/Charket__PublishDate__c.field-meta.xml
<CustomField>
    <fullName>Charket__PublishDate__c</fullName>
    <label>Publish Date</label>
    <type>DateTime</type>
</CustomField>