force-app/main/default/objects/Charket__WeChatMenu__c/recordTypes/Charket__CustomMenu.recordType-meta.xml
<RecordType>
    <fullName>Charket__CustomMenu</fullName>
    <active>true</active>
    <description>Generate custom menu for special followers.</description>
    <label>Custom Menu</label>
</RecordType>