force-app/main/default/objects/Charket__WeChatMenu__c/recordTypes/Charket__DefaultMenu.recordType-meta.xml
<RecordType>
    <fullName>Charket__DefaultMenu</fullName>
    <active>true</active>
    <description>The default WeChat menu</description>
    <label>Default Menu</label>
</RecordType>